--- a/3d_armor_flyswim/mod.conf
+++ b/3d_armor_flyswim/mod.conf
@@ -3,6 +3,6 @@ description = Adds Flying, Swimming, Crouching and Climbing animations to base c
 depends = player_api
 optional_depends = 3d_armor, simple_skins, skinsdb, clothing
 author = sirrobzeroone
-title = 3D Armor Flyswim
+title = Add Fly, Swim, Crouch and Climb animations 
 
 release = 13392
